# buildYourOwnRedis

./: CMakeLists.txt  README.md  main.cpp
include/: client.h  server.h
lib/: utility.h
src/: client.cpp  client_main.cpp  server.cpp  server_main.cpp
tests/: CMakeLists.txt  tests.cpp
